--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ allprojects {
 
     repositories {
         mavenCentral()
-        }
+    }
 }
 
 project(":desktop") {
@@ -33,6 +33,10 @@ project(":desktop") {
 
     dependencies {
         compile project(":core")
+        compile project(":sqlite_core")
+        compile project(":sqlite_desktop")
+
+        compile "org.xerial:sqlite-jdbc:3.8.11.2"
         compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
@@ -41,12 +45,20 @@ project(":desktop") {
 }
 
 project(":android") {
-    apply plugin: "android"
+    apply plugin: "com.android.application"
 
     configurations { natives }
 
+    configurations.compile.exclude module: 'slf4j-api'  // remove from Util-Modul
+    configurations.compile.exclude module: 'logback-android-classic'  // remove from Util-Modul
+    configurations.compile.exclude module: 'logback-classic'  // remove from Util-Modul
+    configurations.compile.exclude group: 'com.google.android', module: 'android'  // remove from intern pom.xml
+
+
     dependencies {
         compile project(":core")
+        compile project(":sqlite_core")
+        compile project(":sqlite_android")
         compile "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi-v7a"
@@ -65,6 +77,7 @@ project(":core") {
 
 
     dependencies {
+        compile project(":sqlite_core")
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
 
@@ -82,7 +95,7 @@ project(":sqlite_core") {
 }
 
 project(":sqlite_android") {
-    apply plugin: "android"
+    apply plugin: "com.android.library"
 
     configurations { natives }
 
@@ -105,6 +118,8 @@ project(":sqlite_desktop") {
 
     dependencies {
         compile project(":sqlite_core")
+
+        compile "org.xerial:sqlite-jdbc:3.8.11.2"
         compile "org.slf4j:slf4j-api:1.7.12"
         compile "ch.qos.logback:logback-classic:1.1.3"
     }
