--- a/build.gradle
+++ b/build.gradle
@@ -49,8 +49,8 @@ project(":android") {
 
     configurations { natives }
 
-    configurations.compile.exclude module: 'slf4j-api'  // remove from Util-Modul
-    configurations.compile.exclude module: 'logback-android-classic'  // remove from Util-Modul
+    //configurations.compile.exclude module: 'slf4j-api'  // remove from Util-Modul
+    //configurations.compile.exclude module: 'logback-android-classic'  // remove from Util-Modul
     configurations.compile.exclude module: 'logback-classic'  // remove from Util-Modul
     configurations.compile.exclude group: 'com.google.android', module: 'android'  // remove from intern pom.xml
 
@@ -59,6 +59,9 @@ project(":android") {
         compile project(":core")
         compile project(":sqlite_core")
         compile project(":sqlite_android")
+
+        compile "org.slf4j:slf4j-api:1.7.12"
+
         compile "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi-v7a"
