--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ project(":android") {
         compile project(":sqlite_android")
 
         compile "org.slf4j:slf4j-api:1.7.12"
+        compile 'com.github.tony19:logback-android-classic:1.1.1-4'
 
         compile "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi"
@@ -94,6 +95,8 @@ project(":sqlite_core") {
     dependencies {
         compile "org.slf4j:slf4j-api:1.7.12"
         compile "ch.qos.logback:logback-classic:1.1.3"
+
+        compile "com.badlogicgames.gdx:gdx:$gdxVersion"
     }
 }
 
