--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,17 @@ allprojects {
     }
 }
 
+project(":GdxSqlite") {
+    apply plugin: "java"
+
+
+    dependencies {
+        compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+        compile "com.badlogicgames.gdx:gdx-jnigen:$gdxVersion"
+
+    }
+}
+
 project(":desktop") {
     apply plugin: "java"
 
