--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0'
+        classpath 'com.android.tools.build:gradle:2.3.0'
         classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.1'
         
 
@@ -37,14 +37,24 @@ allprojects {
     }
 }
 
+project(":jnigen") {
+    apply plugin: "java"
+    
+    dependencies {
+        compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+
+        //include libs
+        compile fileTree(dir: 'libs', include: ['*.jar'])
+    }
+}
+
 project(":GdxSqlite") {
     apply plugin: "java"
 
 
     dependencies {
+        compile project(":jnigen")
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
-        compile "com.badlogicgames.gdx:gdx-jnigen:$gdxVersion"
-
     }
 }
 
@@ -98,7 +108,7 @@ project(":core") {
 
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
-        
+
     }
 }
 
