--- a/jnigen/build.gradle
+++ b/jnigen/build.gradle
@@ -1,4 +1,15 @@
 apply plugin: 'java'
 
-sourceSets.main.java.srcDirs = [ "src/" ]
+sourceSets {
+    main {
+        java{
+            srcDirs = ["src/"]
+        }
+
+        resources {
+            srcDirs = ["src/"]
+            includes = ["**/*.h", "**/*.c","**/*.template"]
+        }
+    }
+}
 
