add CommandLine options for build natives
usage: SQLite native builder
 -a,--all           compile for all platforms
 -d,--dummy <arg>   dummySQLite or real SQLite (true/false
    --ios32         compile for iOs bit
    --linux32       compile for linux 32 bit
    --linux64       compile for linux 64 bit
    --mac32         compile for mac 32 bit
    --mac64         compile for mac 64 bit
    --win32         compile for windows 32 bit
    --win64         compile for windows 64 bit

--- a/GdxSqlite/build.gradle
+++ b/GdxSqlite/build.gradle
@@ -7,4 +7,6 @@ sourceSets.main.java.srcDirs = [ "src/" ]
 dependencies {
     compile project(":jnigen")
     compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
+
 }
