split source and native build module

--- a/GdxSqliteBuild/build.gradle
+++ b/GdxSqliteBuild/build.gradle
@@ -6,7 +6,7 @@ sourceSets.main.java.srcDirs = [ "src/" ]
 
 dependencies {
     compile project(":jnigen")
+    compile project(":GdxSqlite")
     compile "com.badlogicgames.gdx:gdx:$gdxVersion"
     compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
-
 }
