--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include 'desktop', 'android', 'ios', 'core', 'GdxSqlite', 'jnigen'
+include 'desktop', 'android', 'ios', 'core', 'GdxSqliteBuild', 'GdxSqlite', 'jnigen'
