--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.0'
         classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.1'
-        
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0-M5'
 
     }
 }
