--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ global: GRADLE_OPTS="-Xmx2048m"
 before_install: chmod +x gradlew
 before_script: chmod +x gradlew
 script:
-- ./gradlew GdxSqlite:build --stacktrace
+   ./gradlew GdxSqlite:build --stacktrace
