try to create iOS native

--- a/ios/robovm.properties
+++ b/ios/robovm.properties
@@ -1,5 +1,5 @@
 app.version=1.0
-app.id=de.longri.gdx.sqlite
+app.id=de.longri.cachebox3
 app.mainclass=de.longri.gdx.sqlite.IOSLauncher
 app.executable=IOSLauncher
 app.build=1
