--- a/build.gradle
+++ b/build.gradle
@@ -69,7 +69,13 @@ project(":android") {
 
     dependencies {
         compile project(":core")
+
         compile "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
+
+
+        //include libs
+        compile fileTree(dir: 'libs', include: ['*.jar','*.so'])
+
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi-v7a"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-arm64-v8a"
