--- a/GdxSqlite/build.gradle
+++ b/GdxSqlite/build.gradle
@@ -5,32 +5,20 @@ sourceSets.test.java.srcDirs = ["tests/"]
 
 apply plugin: 'org.junit.platform.gradle.plugin'
 
-ext.junit4Version        = '4.12'
-ext.junitVintageVersion  = '4.12.2'
-ext.junitPlatformVersion = '1.0.2'
-ext.junitJupiterVersion  = '5.0.2'
-ext.log4jVersion         = '2.9.0'
+
 
 
 
 dependencies {
     compile "com.badlogicgames.gdx:gdx:$gdxVersion"
 
-
-    // JUnit Jupiter API and TestEngine implementation
-    testCompile("org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}")
-    testRuntime("org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}")
-    testCompile("org.junit.jupiter:junit-jupiter-params:5.0.0")
     testCompile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.0.1'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.0.1'
+    testCompile group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.0.1'
+    testCompile group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.0.1'
 
-
-
-    testCompile("junit:junit:${junit4Version}")
-    testRuntime("org.junit.vintage:junit-vintage-engine:${junitVintageVersion}")
-
-
-    // To avoid compiler warnings about @API annotations in JUnit code
-    testCompileOnly('org.apiguardian:apiguardian-api:1.0.0')
-
+    testRuntime group: 'org.junit.platform', name: 'junit-platform-engine', version: '1.0.1'
+    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
 
 }
