--- a/build.gradle
+++ b/build.gradle
@@ -101,7 +101,7 @@ project(":ios") {
         compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-ios"
 
         //include libs
-        compile fileTree(dir: 'libs', include: ['*.jar'])
+        compile fileTree(dir: '../GdxSqliteBuild/libs', include: ['*.jar'])
     }
 }
 
@@ -110,6 +110,7 @@ project(":core") {
 
 
     dependencies {
+        compile project(":GdxSqlite")
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
 
         //include libs
