* create android build script for Windows * add Cachebox specific db tests * release more c++ resources

--- a/jnigen/src/com/badlogic/gdx/jnigen/resources/scripts/build-android.xml.template
+++ b/jnigen/src/com/badlogic/gdx/jnigen/resources/scripts/build-android.xml.template
@@ -1,8 +1,8 @@
 <project name="android-natives" basedir="." default="postcompile">
 	<property environment="env" />
-	<property name="env.NDK_HOME" value="/Volumes/HDD_DATA/android-ndk-r16b"/>
+	<property name="env.NDK_HOME" value="%ndk_home%"/>
 	<!--  the suffix ndk-build executable -->	
-	<property name="ndkSuffix" value="" />
+	<property name="ndkSuffix" value="%ndk-suffix%" />
 
 	<target name="clean" depends="check-for-ndk" if="has-ndk-build">
 		<exec executable="${env.NDK_HOME}/ndk-build${ndkSuffix}" failonerror="true">
