--- a/GdxSqlite/build.gradle
+++ b/GdxSqlite/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'java'
 
 sourceSets.main.java.srcDirs = [ "src/" ]
 sourceSets.test.java.srcDirs = ["tests/"]
+sourceSets.test.resources.srcDirs = ["testsResources/"]
 
 apply plugin: 'org.junit.platform.gradle.plugin'
 
