--- a/GdxSqlite/build.gradle
+++ b/GdxSqlite/build.gradle
@@ -12,6 +12,7 @@ apply plugin: 'org.junit.platform.gradle.plugin'
 
 dependencies {
     compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+    compile 'org.slf4j:slf4j-api:1.7.25'
 
     testCompile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.0.1'
