--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,29 @@
 buildscript {
-    
+
 
     repositories {
         mavenLocal()
         mavenCentral()
+        maven { url "https://plugins.gradle.org/m2/" }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
-        classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.1'
-        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0-M4'
-
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0'
+        classpath 'org.wisepersist:gwt-gradle-plugin:1.0.9'
+        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.10-SNAPSHOT'
     }
 }
 
 allprojects {
-    apply plugin: "eclipse"
-    apply plugin: "idea"
 
     version = '1.0'
     ext {
         appName = "sqliteGdx"
-        gdxVersion = '1.9.9'
-        roboVMVersion = '2.3.1'
+        gdxVersion = '1.9.10'
+        roboVMVersion = '2.3.10-SNAPSHOT'
         box2DLightsVersion = '1.4'
         ashleyVersion = '1.7.0'
         aiVersion = '1.8.0'
@@ -32,35 +32,36 @@ allprojects {
     repositories {
         mavenLocal()
         mavenCentral()
+        jcenter()
+        google()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
+        maven { url 'https://jitpack.io' }
     }
 }
 
 project(":jnigen") {
-    apply plugin: "java"
+    apply plugin: "java-library"
     
     dependencies {
-        compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+        api "com.badlogicgames.gdx:gdx:$gdxVersion"
 
         //include libs
-        compile fileTree(dir: 'libs', include: ['*.jar'])
+        api fileTree(include: ['*.jar'], dir: 'libs')
     }
 }
 
-
-
 project(":desktop") {
-    apply plugin: "java"
+    apply plugin: "java-library"
 
 
     dependencies {
-        compile project(":core")
-        compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
-        compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+        implementation project(":core")
+        api "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
+        api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
 
         //include libs
-        compile fileTree(dir: 'libs', include: ['*.jar'])
+        api fileTree(include: ['*.jar'], dir: 'libs')
         
     }
 }
@@ -71,54 +72,51 @@ project(":android") {
     configurations { natives }
 
     dependencies {
-        compile project(":core")
+        implementation project(":core")
 
-        compile "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
-
-
-        //include libs
-        compile fileTree(dir: 'libs', include: ['*.jar','*.so'])
-
+        api "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi-v7a"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-arm64-v8a"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-x86"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-x86_64"
-        
+
+
+        //include libs
+        api fileTree(include: ['*.jar'], dir: 'libs')
     }
 }
 
 project(":ios") {
-    apply plugin: "java"
+    apply plugin: "java-library"
     apply plugin: "robovm"
 
+    configurations { natives }
 
     dependencies {
-        compile project(":core")
-        compile "com.mobidevelop.robovm:robovm-rt:$roboVMVersion"
-        compile "com.mobidevelop.robovm:robovm-cocoatouch:$roboVMVersion"
-        compile "com.badlogicgames.gdx:gdx-backend-robovm:$gdxVersion"
-        compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-ios"
+        implementation project(":core")
+        api "com.mobidevelop.robovm:robovm-rt:$roboVMVersion"
+        api "com.mobidevelop.robovm:robovm-cocoatouch:$roboVMVersion"
+        api "com.badlogicgames.gdx:gdx-backend-robovm:$gdxVersion"
+        natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-ios"
+        natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-ios"
 
         //include libs
-        compile fileTree(dir: '../GdxSqliteBuild/libs', include: ['*.jar'])
+        api fileTree(dir: 'libs', include: ['*.jar'])
     }
 }
 
 project(":core") {
-    apply plugin: "java"
+    apply plugin: "java-library"
 
 
     dependencies {
-        compile project(":GdxSqlite")
-        compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+        implementation project(":GdxSqlite")
+        api "com.badlogicgames.gdx:gdx:$gdxVersion"
 
         //include libs
-        compile fileTree(dir: 'libs', include: ['*.jar'])
+        api fileTree(dir: 'libs', include: ['*.jar'])
 
     }
 }
 
-tasks.eclipse.doLast {
-    delete ".project"
-}
