--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: "java"
 
-sourceCompatibility = 1.6
+sourceCompatibility = 1.8
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
-sourceSets.main.java.srcDirs = [ "src/" ]
+//sourceSets with including LibGdx Tests for run unit tests on device
+//sourceSets.main.java.srcDirs = ["src/", "../tests/libgdx_test/src"]
 
+//sourceSets without LibGdx tests (aka release)
+sourceSets.main.java.srcDirs = ["src/"]
 
-eclipse.project {
-    name = appName + "-core"
-}
