--- a/GdxSqlite/build.gradle
+++ b/GdxSqlite/build.gradle
@@ -1,26 +1,15 @@
 apply plugin: 'java'
 
-sourceSets.main.java.srcDirs = [ "src/" ]
-sourceSets.test.java.srcDirs = ["tests/"]
-sourceSets.test.resources.srcDirs = ["testsResources/"]
+sourceSets {
+    main {
+        java{
+            srcDirs = ["src/"]
+        }
 
-apply plugin: 'org.junit.platform.gradle.plugin'
-
-
-
-
-
-dependencies {
-    compile "com.badlogicgames.gdx:gdx:$gdxVersion"
-    compile 'org.slf4j:slf4j-api:1.7.25'
-
-    testCompile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.0.1'
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.0.1'
-    testCompile group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.0.1'
-    testCompile group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.0.1'
-
-    testRuntime group: 'org.junit.platform', name: 'junit-platform-engine', version: '1.0.1'
-    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
-
+        resources {
+            srcDirs = ["src/"]
+            includes = ["**/*.h", "**/*.c","**/*.template"]
+        }
+    }
 }
+
