--- a/GdxSqliteBuild/build.gradle
+++ b/GdxSqliteBuild/build.gradle
@@ -5,7 +5,7 @@ sourceSets.main.java.srcDirs = [ "src/" ]
 
 
 dependencies {
-    compile project(":jnigen")
+//    compile project(":jnigen")
     compile project(":GdxSqlite")
     compile "com.badlogicgames.gdx:gdx:$gdxVersion"
     compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
