--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ allprojects {
         box2DLightsVersion = '1.4'
         ashleyVersion = '1.7.0'
         aiVersion = '1.8.0'
+        slf4jVersion = '1.7.26'
     }
 
     repositories {
@@ -40,16 +41,35 @@ allprojects {
     }
 }
 
-project(":jnigen") {
+project(":GdxSqlite"){
     apply plugin: "java-library"
-    
+
     dependencies {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
+        api "org.slf4j:slf4j-api:$slf4jVersion"
 
-        //include libs
-        api fileTree(include: ['*.jar'], dir: 'libs')
+        api "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
+        api group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.0.1'
+        api group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.0.1'
+        api group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.0.1'
+        api group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.0.1'
+
+        testRuntime group: 'org.junit.platform', name: 'junit-platform-engine', version: '1.0.1'
+        api group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+
     }
 }
+//
+//project(":jnigen") {
+//    apply plugin: "java-library"
+//
+//    dependencies {
+//        api "com.badlogicgames.gdx:gdx:$gdxVersion"
+//
+//        //include libs
+//        api fileTree(include: ['*.jar'], dir: 'libs')
+//    }
+//}
 
 project(":desktop") {
     apply plugin: "java-library"
