--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,4 @@
-include 'desktop', 'android', 'ios', 'core', 'GdxSqliteBuild', 'GdxSqlite', 'jnigen'
+include 'desktop', 'android', 'ios', 'core', 'GdxSqliteBuild', 'GdxSqlite'
+
+//, 'jnigen'
 
