next step install ANT!

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,7 +1,7 @@
-apply plugin: "java"
+apply plugin: "java-library"
 
 sourceCompatibility = 1.8
-[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+//[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 //sourceSets with including LibGdx Tests for run unit tests on device
 //sourceSets.main.java.srcDirs = ["src/", "../tests/libgdx_test/src"]
