--- a/GdxSqliteBuild/build.gradle
+++ b/GdxSqliteBuild/build.gradle
@@ -1,12 +1,10 @@
-apply plugin: 'java'
+apply plugin: "java-library"
 
-sourceSets.main.java.srcDirs = [ "src/" ]
+sourceCompatibility = 1.8
+//[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
+//sourceSets with including LibGdx Tests for run unit tests on device
+//sourceSets.main.java.srcDirs = ["src/", "../tests/libgdx_test/src"]
 
-
-dependencies {
-//    compile project(":jnigen")
-    compile project(":GdxSqlite")
-    compile "com.badlogicgames.gdx:gdx:$gdxVersion"
-    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
-}
+//sourceSets without LibGdx tests (aka release)
+sourceSets.main.java.srcDirs = ["src/"]
